end first iteration:SCRUM

--- a/src/app/features/auth/password-reset-request/password-reset-request.component.html
+++ b/src/app/features/auth/password-reset-request/password-reset-request.component.html
@@ -1,19 +1,20 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
     <form [formGroup]="form" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
+        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
         <mat-card>
-            <mat-card-title>angular-material-template</mat-card-title>
-            <mat-card-subtitle>Reset your password</mat-card-subtitle>
+            <mat-card-title>SISTEMA</mat-card-title>
+            <mat-card-subtitle>Restablece tu contraseña</mat-card-subtitle>
             <mat-card-content>
 
                 <mat-form-field class="full-width">
                     <input id="emailInput" matInput placeholder="Email" formControlName="email" autocomplete="email" type="email">
 
                     <mat-error id="invalidEmailError" *ngIf="form.controls['email'].hasError('email')">
-                        Please enter a valid email address
+                        Por favor digite un email válido
                     </mat-error>
                     <mat-error id="requiredEmailError" *ngIf="form.controls['email'].hasError('required')">
-                        Email is
-                        <strong>required</strong>
+                        El email
+                        <strong>requerido</strong>
                     </mat-error>
                 </mat-form-field>
 
@@ -21,12 +22,11 @@
 
             <mat-card-actions class="login-actions">
                 <button id="submit" mat-raised-button color="primary" [disabled]="form.invalid || loading"
-                    (click)="resetPassword()">Reset Password</button>
-                <button id="cancel" mat-button (click)="cancel()">Cancel</button>
+                    (click)="resetPassword()">Restablecer contraseña</button>
+                <button id="cancel" mat-button (click)="cancel()">Cancelar</button>
             </mat-card-actions>
 
         </mat-card>
 
-        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
     </form>
 </div>
