--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,47 +1,50 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
     <form [formGroup]="loginForm" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
+        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
         <mat-card>
-            <mat-card-title>angular-material-template</mat-card-title>
-            <mat-card-subtitle>Log in to your account</mat-card-subtitle>
+            <mat-card-title>SISTEMA</mat-card-title>
+            <mat-card-subtitle>Inice sesión para continuar</mat-card-subtitle>
             <mat-card-content>
 
-                <mat-form-field class="full-width">
-                    <input id="emailInput" matInput placeholder="Email" formControlName="email" autocomplete="email"
-                        type="email">
-
+                <mat-form-field class="full-width mt-1" appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email" type="email">
+                    <mat-icon matSuffix>email</mat-icon>
                     <mat-error id="invalidEmailError" *ngIf="loginForm.controls['email'].hasError('email')">
-                        Please enter a valid email address
+                        Digite un email válido
                     </mat-error>
                     <mat-error id="requiredEmailError" *ngIf="loginForm.controls['email'].hasError('required')">
-                        Email is
-                        <strong>required</strong>
+                        El email es
+                        <strong>requerido</strong>
                     </mat-error>
-
                 </mat-form-field>
-
-                <mat-form-field class="full-width">
-                    <input id="passwordInput" matInput placeholder="Password" formControlName="password" type="password"
-                        autocomplete="current-password">
+                
+                <mat-form-field class="full-width mt-1" appearance="outline">
+                    <mat-label>Contraseña</mat-label>
+                    <input id="passwordInput" matInput formControlName="password" type="password"
+                    autocomplete="current-password">
                     <mat-error id="requiredPasswordError" *ngIf="loginForm.controls['email'].hasError('required')">
-                        Password is
-                        <strong>required</strong>
+                        La contraseña es
+                        <strong>requerida</strong>
                     </mat-error>
                 </mat-form-field>
 
-                <div class="full-width">
-                    <mat-slide-toggle formControlName="rememberMe">Remember my email address</mat-slide-toggle>
+                <div class="full-width mt-1">
+                    <mat-slide-toggle formControlName="rememberMe">Recuerdame el email</mat-slide-toggle>
                 </div>
 
             </mat-card-content>
 
             <mat-card-actions class="login-actions">
-                <button mat-raised-button id="login" color="primary" [disabled]="loginForm.invalid || loading"
-                    (click)="login()">Login</button>
-                <button mat-button id="resetPassword" (click)="resetPassword()" type="button">Reset Password</button>
+                <button mat-raised-button 
+                        id="login" 
+                        class="btn-primary" 
+                        [disabled]="loginForm.invalid || loading"
+                    (click)="login()">Iniciar sesión</button>
+                <button mat-button id="resetPassword" (click)="resetPassword()" type="button">Restablecer contraseña</button>
             </mat-card-actions>
 
         </mat-card>
 
-        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
     </form>
 </div>
