--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,17 +1,17 @@
 <div class="navbar-container" [class.example-is-mobile]="mobileQuery.matches">
 
   <!-- Top navbar -->
-  <mat-toolbar class="navbar" color="primary">
+  <mat-toolbar class="navbar">
 
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
 
-    <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
+    <!-- <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
       <h1>
-        angular-material-template
+        
       </h1>
-    </a>
+    </a> -->
 
     <span class="navbar-spacer"></span>
 
@@ -28,8 +28,6 @@
       </a>
 
     </mat-menu>
-
-
 
     <button mat-button [matMenuTriggerFor]="userMenu">
       <mat-icon>person</mat-icon>
@@ -55,72 +53,48 @@
 
   <mat-sidenav-container class="navbar-sidenav-container">
     <!-- Side nav -->
-    <mat-sidenav #snav [opened]="!mobileQuery.matches" [mode]="mobileQuery.matches ? 'over' : 'side'"
-      [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" class="sidenav">
+    <mat-sidenav #snav 
+                 [opened]="!mobileQuery.matches" 
+                 [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches" 
+                 fixedTopGap="56" 
+                 class="sidenav">
 
       <mat-nav-list>
         <h3 mat-subheader>Home</h3>
 
-        <a mat-list-item [routerLink]="['/dashboard']" routerLinkActive="active">
+        <a mat-list-item class="font-color menu-item" [routerLink]="['/dashboard']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             dashboard
           </mat-icon>
-          <p mat-line> Dashboard </p>
+          <p mat-line> Panel principal </p>
         </a>
 
-        <a mat-list-item [routerLink]="['/customers']" routerLinkActive="active">
+        <a mat-list-item class="font-color menu-item" [routerLink]="['/projects']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             business
           </mat-icon>
-          <p mat-line> Customers </p>
+          <p mat-line> Proyectos </p>
         </a>
-        <a mat-list-item [routerLink]="['/users']" routerLinkActive="active">
+        <a mat-list-item class="font-color menu-item" [routerLink]="['/facilitators']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             people
           </mat-icon>
-          <p mat-line> Users </p>
+          <p mat-line> Facilitadores </p>
         </a>
 
-        <a mat-list-item [routerLink]="['/account/profile']">
-          <mat-icon mat-list-icon>person</mat-icon>
-          <p mat-line> Account </p>
+        <a mat-list-item class="font-color menu-item" [routerLink]="['/administrables/config']" routerLinkActive="active">
+          <mat-icon mat-list-icon>
+            <span class="material-symbols-outlined">admin_panel_settings</span>
+          </mat-icon>
+          <p mat-line> Administrable </p>
         </a>
 
-        <a mat-list-item [routerLink]="['/auth/login']">
+        <a mat-list-item class="font-color menu-item" [routerLink]="['/auth/login']">
           <mat-icon mat-list-icon>exit_to_app</mat-icon>
           <p mat-line> Log out </p>
         </a>
 
-        <mat-divider></mat-divider>
-
-        <h3 mat-subheader>Resources</h3>
-
-        <a mat-list-item [routerLink]="['/icons']" routerLinkActive="active">
-          <mat-icon mat-list-icon>
-            toll
-          </mat-icon>
-          <p mat-line> Icons </p>
-        </a>
-        <a mat-list-item [routerLink]="['/typography']" routerLinkActive="active">
-          <mat-icon mat-list-icon>
-            font_download
-          </mat-icon>
-          <p mat-line> Typography </p>
-        </a>
-
-        <a mat-list-item href="https://material.angular.io/components/categories" target="_blank">
-          <mat-icon mat-list-icon>
-            link
-          </mat-icon>
-          <p mat-line> Material Components </p>
-        </a>
-
-        <a id="push-bottom" mat-list-item [routerLink]="['/about']" routerLinkActive="active">
-          <mat-icon mat-list-icon>
-            info_outline
-          </mat-icon>
-          <p mat-line> About </p>
-        </a>
       </mat-nav-list>
 
     </mat-sidenav>
@@ -133,7 +107,6 @@
         </mat-progress-bar>
         <!-- <mat-spinner class="spinner" [diameter]="50" *ngIf="showSpinner"></mat-spinner> -->
       </div>
-
 
       <router-outlet></router-outlet>
 
