--- a/src/app/shared/facilitator/form-facilitator/form-facilitator.component.html
+++ b/src/app/shared/facilitator/form-facilitator/form-facilitator.component.html
@@ -90,7 +90,7 @@
         <button mat-button
                 class="mr-1 btn-secondary"
                 [disabled]="_loadding.getLoadding()"
-                mat-dialog-close>Cancelar</button>
+                [mat-dialog-close]="false">Cancelar</button>
         <button mat-raised-button
                 class="btn-primary" 
                 type="button"
