--- a/src/app/shared/projects/btn-actions-event/btn-actions-event.component.html
+++ b/src/app/shared/projects/btn-actions-event/btn-actions-event.component.html
@@ -10,3 +10,6 @@
 <button class="ml-3 btn-primary" mat-mini-fab color="primary" (click)="openDialogParticipant()" [disabled]="_loadding.getLoadding()" matTooltip="Registrar nuevo asistente">
     <mat-icon>person_add</mat-icon>
 </button>
+<button class="ml-3" mat-mini-fab color="primary" (click)="addEvidence()" [disabled]="_loadding.getLoadding()" matTooltip="Registrar evidencias">
+    <mat-icon>add_photo_alternate</mat-icon>
+</button>
