--- a/src/app/features/dashboard/components/modal-search-project/modal-search-project.component.html
+++ b/src/app/features/dashboard/components/modal-search-project/modal-search-project.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content>
     <form>
         <mat-form-field class="full-width m-0 p-0" appearance="outline">
-          <mat-label>Buscar CUI | ID proyecto</mat-label>
+          <mat-label>Digite el CUI del proyecto</mat-label>
           <input type="text" 
                  name="search" 
                  matInput 
@@ -16,10 +16,13 @@
       <div *ngIf="projectEvents.length!==0">
         <mat-selection-list [multiple]="false" (selectionChange)="optionSelectedEvent($event)">
           <p class="m-0 mb-2">
-           <mat-icon>fact_check</mat-icon> Selecione un evento</p>
-          <mat-list-option *ngFor="let event of projectEvents" 
+           <mat-icon>check_circle</mat-icon> Selecione un evento</p>
+          <mat-list-option *ngFor="let event of projectEvents; let i=index" 
                             class="mat-list-option"
-                            [value]="event">ID {{event.id_event}} - {{event.event_topic | slice:0:50}}...</mat-list-option>
+                            [value]="event">{{i+1}} - {{event.event_topic | slice:0:50}}...</mat-list-option>
         </mat-selection-list>
+      </div>
+      <div *ngIf="selectedProject && projectEvents.length===0">
+        <p class="m-0"><mat-icon>folder</mat-icon> No se econtraron eventos para el proyecto</p>
       </div>
 </mat-dialog-content>
