--- a/src/app/features/station/pages/event/event.component.html
+++ b/src/app/features/station/pages/event/event.component.html
@@ -14,28 +14,54 @@
             </ng-template>
           </div>
           <mat-divider></mat-divider>
-          <div *ngIf="_local.getEvent(); else skeletonCard" class="mt-3">
-              <div class="d-flex justify-content-start text-plain-secondary p-2">
-                <b class="m-1"><mat-icon>assignment_ind</mat-icon></b> 
-                Facilitadores
-              </div>
-              <div class="d-flex justify-content-start text-plain-secondary p-2">
-                <b class="m-1"><mat-icon>location_on</mat-icon></b>
-                <p>{{_local.getEvent().event_region}} - {{_local.getEvent().event_provincie}} - {{_local.getEvent().event_district}}</p>
-              </div>
-              <div class="d-flex justify-content-start text-plain-secondary p-2">
-                <b class="m-1"><mat-icon>calendar_month</mat-icon></b>
-                <div class="flex">
-                  <div class="flex chip-1">{{_local.getEvent().event_datetime_start | date:'medium'}}</div>
-                  <div class="flex chip-2 ml-1">{{_local.getEvent().event_datetime_end | date:'medium'}}</div>
+          <mat-card-content>
+            <div class="flex grid" *ngIf="_local.getEvent(); else skeletonCard">
+              <div class="col-6">
+                <div class="d-flex justify-content-start text-plain-secondary p-2">
+                  <b class="m-1">Tema:</b>
+                  <p>{{_local.getEvent().event_topic | lowercase}}</p>
+                </div>
+                <div class="d-flex justify-content-start text-plain-secondary p-2">
+                  <b class="m-1">Tipo de evento:</b>
+                  <p>{{_local.getEvent().event_type.event_type_name}}</p>
+                </div>
+                <div class="d-flex justify-content-start text-plain-secondary p-2">
+                  <b class="m-1"><mat-icon>location_on</mat-icon></b>
+                  <p>{{_local.getEvent().event_region}} - {{_local.getEvent().event_provincie}} - {{_local.getEvent().event_district}}</p>
+                </div>
+                <div class="d-flex justify-content-start text-plain-secondary p-2">
+                  <b class="m-1"><mat-icon>calendar_month</mat-icon></b>
+                  <div class="flex">
+                    <div class="flex chip-1">{{_local.getEvent().event_datetime_start | date:'medium'}}</div>
+                    <div class="flex chip-2 ml-1">{{_local.getEvent().event_datetime_end | date:'medium'}}</div>
+                  </div>
                 </div>
               </div>
-              <div class="p-2 ml-2">
-                <div class="text-plain-secondary">
-                  <b>Tema:</b> {{_local.getEvent().event_topic | uppercase}}
+              <div class="col-6">
+                <div class="d-flex justify-content-start text-plain-secondary p-2">
+                  <b class="m-1"><mat-icon>assignment_ind</mat-icon></b> 
+                  Facilitadores
+                </div>
+                <div class="container-list-facilitador">
+                  <ul class="m-0 p-0">
+                    <li *ngFor="let item of _local.getEvent().facilitator_event; let index=index" 
+                        class="flex justify-content-between justify-content-center align-items-center">
+                      <span class="ml-2">{{item.facilitator!.facilitator_name}} {{item.facilitator!.facilitator_first_name}}</span>
+                      <div>
+                        <mat-icon class="icon-list-facilitator" (click)="editFacilitator(item)">edit</mat-icon>
+                        <mat-icon class="icon-list-facilitator" (click)="deleteFacilitator(item)">delete</mat-icon>
+                      </div>
+                    </li>
+                    <li *ngIf="_local.getEvent().facilitator_event.length===0" 
+                        class="flex justify-content-between justify-content-center align-items-center">
+                      <span class="ml-2 p-1">REGISTRE FACILITADORES</span>
+                      <div></div>
+                    </li>
+                  </ul>
                 </div>
               </div>
-          </div>
+            </div>
+          </mat-card-content>
           <ng-template #skeletonCard>
             <div class="d-flex justify-content-start p-2">
               <app-skeleton width="200px"></app-skeleton>
@@ -52,12 +78,15 @@
               <app-skeleton width="100%"></app-skeleton>
             </div>
           </ng-template>
-          <mat-card-actions align="end" class="mb-1 mt-2 mr-2">
+          <mat-divider></mat-divider>
+          <mat-card-actions class="mt-3 mr-2">
             <app-btn-actions-event [event]="event"
+                                   (statusFacilitador)="statusFacilitador($event)"
                                    (statusEventFormParticipant)="statusEventFormParticipant($event)"
                                    (statusEvent)="statusEvent($event)"></app-btn-actions-event>
           </mat-card-actions>
       </mat-card>
+
       <mat-card>
           <mat-card-content>
             <div class="spacer-flex">
