--- a/src/app/shared/reports/pie-chart/pie-chart.component.html
+++ b/src/app/shared/reports/pie-chart/pie-chart.component.html
@@ -6,9 +6,6 @@
       [legend]="showLegend"
       [labels]="showLabels"
       [doughnut]="isDoughnut"
-      [legendPosition]="legendPosition"
-      (select)="onSelect($event)"
-      (activate)="onActivate($event)"
-      (deactivate)="onDeactivate($event)">
+      [legendPosition]="legendPosition">
     </ngx-charts-pie-chart>
 </div>
