--- a/src/app/shared/reports/vertical-bar-chart/vertical-bar-chart.component.html
+++ b/src/app/shared/reports/vertical-bar-chart/vertical-bar-chart.component.html
@@ -5,11 +5,11 @@
       [gradient]="gradient"
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
+      [showDataLabel]="true"
       [legend]="showLegend"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
       [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel"
-      (select)="onSelect($event)">
+      [yAxisLabel]="yAxisLabel">
     </ngx-charts-bar-vertical>
 </div>
