--- a/src/app/shared/reports/vertical-bar-chart/vertical-bar-chart.component.html
+++ b/src/app/shared/reports/vertical-bar-chart/vertical-bar-chart.component.html
@@ -9,6 +9,7 @@
       [legend]="showLegend"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
+      [legendPosition]="legendPosition"
       [xAxisLabel]="xAxisLabel"
       [yAxisLabel]="yAxisLabel">
     </ngx-charts-bar-vertical>
