--- a/src/app/features/dashboard/components/modal-search-project/modal-search-project.component.html
+++ b/src/app/features/dashboard/components/modal-search-project/modal-search-project.component.html
@@ -19,7 +19,7 @@
            <mat-icon>check_circle</mat-icon> Selecione un evento</p>
           <mat-list-option *ngFor="let event of projectEvents; let i=index" 
                             class="mat-list-option"
-                            [value]="event">{{i+1}} - {{event.event_topic | slice:0:50}}...</mat-list-option>
+                            [value]="event">{{event.event_topic | firstLetter | slice:0:50}}...</mat-list-option>
         </mat-selection-list>
       </div>
       <div *ngIf="selectedProject && projectEvents.length===0">
