--- a/src/app/features/station/layout/layout.component.html
+++ b/src/app/features/station/layout/layout.component.html
@@ -8,21 +8,7 @@
       </button>
   
       <span class="navbar-spacer"></span>
-  
-      <!-- <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
-        <mat-icon matBadge="2" matBadgeColor="accent">notifications</mat-icon>
-      </button>
-      <mat-menu #notificationMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
-  
-        <a mat-menu-item>
-          <span>You have new tasks</span>
-        </a>
-        <a mat-menu-item>
-          <span>You have a new message</span>
-        </a>
-  
-      </mat-menu> -->
-  
+    
       <button mat-button [matMenuTriggerFor]="userMenu">
         <mat-icon>person</mat-icon>
         <span fxShow fxHide.xs>
@@ -31,14 +17,14 @@
       </button>
       <mat-menu #userMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
   
-        <a mat-menu-item [routerLink]="['/account/profile']">
+        <a mat-menu-item>
           <mat-icon>person</mat-icon>
-          <span>Account</span>
+          <span>Mi cuenta</span>
         </a>
   
         <a mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
-          <span>Log out</span>
+          <span>Cerrar sesión</span>
         </a>
   
       </mat-menu>
@@ -61,7 +47,6 @@
           <ng-template #skeletonTitle>
             <app-skeleton width="100%" height="40px"></app-skeleton>
           </ng-template>
-          <mat-divider class="mb-1"></mat-divider>
           <a mat-list-item class="font-color menu-item" [routerLink]="['./dashboard']" routerLinkActive="active">
             <mat-icon mat-list-icon>
               dashboard
@@ -78,7 +63,7 @@
           
           <a mat-list-item class="font-color menu-item" (click)="logout()">
             <mat-icon mat-list-icon>exit_to_app</mat-icon>
-            <p mat-line> Log out </p>
+            <p mat-line> Cerrar sesión </p>
           </a>
   
         </mat-nav-list>
@@ -91,10 +76,11 @@
         <div class="progress-bar-container">
           <mat-progress-bar class="custom-mat-progress-bar" mode="indeterminate" *ngIf="spinnerService.visibility | async">
           </mat-progress-bar>
-          <!-- <mat-spinner class="spinner" [diameter]="50" *ngIf="showSpinner"></mat-spinner> -->
         </div>
   
-        <router-outlet></router-outlet>
+        <div class="ml-1 mr-1">
+          <router-outlet></router-outlet>
+        </div>
   
       </mat-sidenav-content>
     </mat-sidenav-container>
