--- a/src/app/features/station/pages/event/event.component.html
+++ b/src/app/features/station/pages/event/event.component.html
@@ -1,92 +1,107 @@
 <div class="container" fxLayout="row" fxLayoutAlign="center none">
     <div fxFlex="98%">
-      <mat-card class="mb-2">
-          <div class="spacer-flex">
-            <h2 class="text-color-primary d-flex">
-              <mat-icon>event</mat-icon>
-              <p mat-line class="m-1">Evento</p>
-            </h2>
-            <div class="container-cui" *ngIf="_local.getEvent(); else skeletonCUI">
-              <b>ID - </b>{{_local.getEvent().id_event | showNumber}}
-            </div>
-            <ng-template #skeletonCUI>
-              <app-skeleton width="100px"></app-skeleton>
-            </ng-template>
-          </div>
+      <mat-accordion>
+        <mat-expansion-panel [expanded]="0" hideToggle class="mat-expansion-panel">
+          <mat-expansion-panel-header>
+            <mat-panel-title class="spacer-flex m-0">
+              <h3 class="text-color-primary d-flex">
+                <mat-icon>event</mat-icon>
+                <p mat-line class="m-1">Evento</p>
+              </h3>
+              <div class="container-cui" *ngIf="_local.getEvent(); else skeletonCUI">
+                <b>ID - </b>{{_local.getEvent().id_event | showNumber}}
+              </div>
+              <ng-template #skeletonCUI>
+                <app-skeleton width="100px"></app-skeleton>
+              </ng-template>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
           <mat-divider></mat-divider>
-          <mat-card-content>
-            <div class="flex grid" *ngIf="_local.getEvent(); else skeletonCard">
-              <div class="col-6">
-                <div class="d-flex justify-content-start text-plain-secondary p-2">
-                  <b class="m-1">Tema:</b>
-                  <p>{{_local.getEvent().event_topic | lowercase}}</p>
+          <div class="mb-2">
+            <mat-card-content>
+              <div class="flex grid" *ngIf="_local.getEvent(); else skeletonCard">
+                <div class="col-6">
+                  <div class="d-flex justify-content-start text-plain-secondary p-2">
+                    <b class="m-1">Tema:</b>
+                    <p>{{_local.getEvent().event_topic | firstLetter}}</p>
+                  </div>
+                  <div class="d-flex justify-content-start text-plain-secondary p-2">
+                    <b class="m-1">Tipo de evento:</b>
+                    <p>{{_local.getEvent().event_type.event_type_name}}</p>
+                  </div>
+                  <div class="d-flex justify-content-start text-plain-secondary p-2">
+                    <b class="m-1"><mat-icon>location_on</mat-icon></b>
+                    <p>{{_local.getEvent().event_region}} - {{_local.getEvent().event_provincie}} - {{_local.getEvent().event_district}}</p>
+                  </div>
+                  <div class="d-flex justify-content-start text-plain-secondary p-2">
+                    <b class="m-1"><mat-icon>calendar_month</mat-icon></b>
+                    <div class="flex">
+                      <div class="chip-1">{{_local.getEvent().event_datetime_start | date:'medium'}}</div>
+                      <div class="chip-2 ml-1">{{_local.getEvent().event_datetime_end | date:'medium'}}</div>
+                    </div>
+                  </div>
                 </div>
-                <div class="d-flex justify-content-start text-plain-secondary p-2">
-                  <b class="m-1">Tipo de evento:</b>
-                  <p>{{_local.getEvent().event_type.event_type_name}}</p>
-                </div>
-                <div class="d-flex justify-content-start text-plain-secondary p-2">
-                  <b class="m-1"><mat-icon>location_on</mat-icon></b>
-                  <p>{{_local.getEvent().event_region}} - {{_local.getEvent().event_provincie}} - {{_local.getEvent().event_district}}</p>
-                </div>
-                <div class="d-flex justify-content-start text-plain-secondary p-2">
-                  <b class="m-1"><mat-icon>calendar_month</mat-icon></b>
-                  <div class="flex">
-                    <div class="flex chip-1">{{_local.getEvent().event_datetime_start | date:'medium'}}</div>
-                    <div class="flex chip-2 ml-1">{{_local.getEvent().event_datetime_end | date:'medium'}}</div>
+                <div class="col-6">
+                  <div class="d-flex justify-content-start text-plain-secondary mt-2 mb-2">
+                    <b>Facilitadores</b>
+                  </div>
+                  <div class="container-list-facilitador">
+                    <ul class="m-0 p-0">
+                      <li *ngFor="let item of _local.getEvent().facilitator_event; let index=index" 
+                          class="flex justify-content-between justify-content-center align-items-center">
+                        <span class="ml-2">{{item.facilitator!.facilitator_name}} {{item.facilitator!.facilitator_first_name}}</span>
+                        <div>
+                          <mat-icon class="icon-list-facilitator" (click)="editFacilitator(item)">edit</mat-icon>
+                          <mat-icon class="icon-list-facilitator" (click)="deleteFacilitator(item)">delete</mat-icon>
+                        </div>
+                      </li>
+                      <li *ngIf="_local.getEvent().facilitator_event.length===0" 
+                          class="flex justify-content-between justify-content-center align-items-center">
+                        <span class="ml-2 p-1">Registre facilitadores</span>
+                        <div></div>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
-              <div class="col-6">
-                <div class="d-flex justify-content-start text-plain-secondary p-2">
-                  <b class="m-1"><mat-icon>assignment_ind</mat-icon></b> 
-                  Facilitadores
-                </div>
-                <div class="container-list-facilitador">
-                  <ul class="m-0 p-0">
-                    <li *ngFor="let item of _local.getEvent().facilitator_event; let index=index" 
-                        class="flex justify-content-between justify-content-center align-items-center">
-                      <span class="ml-2">{{item.facilitator!.facilitator_name}} {{item.facilitator!.facilitator_first_name}}</span>
-                      <div>
-                        <mat-icon class="icon-list-facilitator" (click)="editFacilitator(item)">edit</mat-icon>
-                        <mat-icon class="icon-list-facilitator" (click)="deleteFacilitator(item)">delete</mat-icon>
-                      </div>
-                    </li>
-                    <li *ngIf="_local.getEvent().facilitator_event.length===0" 
-                        class="flex justify-content-between justify-content-center align-items-center">
-                      <span class="ml-2 p-1">REGISTRE FACILITADORES</span>
-                      <div></div>
-                    </li>
-                  </ul>
-                </div>
+            </mat-card-content>
+            <ng-template #skeletonCard>
+              <div class="d-flex justify-content-start p-2">
+                <app-skeleton width="200px"></app-skeleton>
               </div>
+              <div class="d-flex justify-content-start p-2">
+                <app-skeleton width="300px"></app-skeleton>
+              </div>
+              <div class="d-flex justify-content-start p-2">
+                <app-skeleton width="300px"></app-skeleton>
+              </div>
+              <div class="p-2">
+                <app-skeleton width="100%"></app-skeleton>
+                <app-skeleton width="100%"></app-skeleton>
+                <app-skeleton width="100%"></app-skeleton>
+              </div>
+            </ng-template>
+          </div>
+        </mat-expansion-panel>
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <h3 class="text-color-primary d-flex">
+                <mat-icon>settings</mat-icon>
+                <p mat-line class="m-1">Administrar</p>
+              </h3>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+            <div class="mb-2">
+              <app-btn-actions-event [event]="event"
+                                     (statusFacilitador)="statusFacilitador($event)"
+                                     (statusEventFormParticipant)="statusEventFormParticipant($event)"
+                                     (statusEvent)="statusEvent($event)"></app-btn-actions-event>
             </div>
-          </mat-card-content>
-          <ng-template #skeletonCard>
-            <div class="d-flex justify-content-start p-2">
-              <app-skeleton width="200px"></app-skeleton>
-            </div>
-            <div class="d-flex justify-content-start p-2">
-              <app-skeleton width="300px"></app-skeleton>
-            </div>
-            <div class="d-flex justify-content-start p-2">
-              <app-skeleton width="300px"></app-skeleton>
-            </div>
-            <div class="p-2">
-              <app-skeleton width="100%"></app-skeleton>
-              <app-skeleton width="100%"></app-skeleton>
-              <app-skeleton width="100%"></app-skeleton>
-            </div>
-          </ng-template>
-          <mat-divider></mat-divider>
-          <mat-card-actions class="mt-3 mr-2">
-            <app-btn-actions-event [event]="event"
-                                   (statusFacilitador)="statusFacilitador($event)"
-                                   (statusEventFormParticipant)="statusEventFormParticipant($event)"
-                                   (statusEvent)="statusEvent($event)"></app-btn-actions-event>
-          </mat-card-actions>
-      </mat-card>
-
+        </mat-expansion-panel>
+      </mat-accordion>
+      <div class="mb-3"></div>
       <mat-card>
           <mat-card-content>
             <div class="spacer-flex">
