--- a/src/app/shared/reports/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/shared/reports/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -7,6 +7,7 @@
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
       [showDataLabel]="true"
+      [showGridLines]="false"
       [legend]="showLegend"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
